Project

General

Profile

Actions

Bug #18051

closed

"rbd mirror image resync" does not force resync after split-brain

Added by Mykola Golub over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If split-brain is detected for a mirroring image, running "rbd mirror image resync" command for this image is expected to force image resync, but cureently the resync is not started.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #18191: jewel: "rbd mirror image resync" does not force resync after split-brainResolvedNathan CutlerActions
Actions #1

Updated by Mykola Golub over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Jason Dillaman over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Mykola Golub over 7 years ago

Should be backported together with the fix for #18156

Actions #4

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #18191: jewel: "rbd mirror image resync" does not force resync after split-brain added
Actions #5

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF