rbd-mirror: make 'rbd mirror image resync' work after split-brain

Fixes: http://tracker.ceph.com/issues/18051
Signed-off-by: Mykola Golub <mgolub@mirantis.com>
(cherry picked from commit 6cb1ed485f89f30fe6dda31e77e16e23f9b5b2ab)